[package]
name = "macro_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.11", features = ["std", "env-filter"]}
tracing-opentelemetry = "0.17.2"
opentelemetry-jaeger = "0.16.0"
opentelemetry = "0.17"
fern = "0.6.1"
log = "0.4.17"
chrono = "0.4"